<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_address"
        android:title="@string/title_home" />

<!--    <item
        android:id="@+id/dishesListFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/title_dishes"
        />-->

    <item
        android:id="@+id/shopping_cart_fragment"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_shopping_cart"/>

    <item
        android:id="@+id/favorites_fragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_favorites"/>

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"/>
</menu>