<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <!--Programacion imagen, tener encuenta Login_Image_View, @drawable/login-->
        <!--Programacion TexInputLayout, Cambiar @drawable/ic_user-->

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="371dp"
            android:layout_height="308dp"
            android:contentDescription="@string/logo_image_view"
            app:srcCompat="@drawable/im_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_text"
                android:inputType="textWebEmailAddress"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Programacion TexInputLayout, Cambiar @drawable/ic_password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input_text"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:textAllCaps="false"
            android:text="@string/login_button"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/have_an_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginEnd="3dp"
                android:text="@string/have_an_account_text_view"
                style="@style/NormalTextView"/>

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_button"
                android:textAlignment="textStart"
                android:layout_marginEnd="3dp"
                style="@style/LinkTextView"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="18dp"
            android:text="@string/forgot_password_text_view"
            android:textAlignment="center"
            style="@style/LinkTextView"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>