<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cook_card_view"
    android:layout_margin="14dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picture_dishes"
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:contentDescription="@string/upload_image_view"
            android:src="@drawable/ic_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/ranke_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="3sp"
            android:text="@string/cook_rank"
            android:textAppearance="@style/type_dish_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/name_chef_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_chef_text_view"
            android:textAppearance="@style/name_dish_style"
            app:layout_constraintEnd_toStartOf="@+id/picture_dishes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ranke_textView" />

        <TextView
            android:id="@+id/type_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/dish_type_text_view"
            android:textAppearance="@style/made_for_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_chef_textView"
            tools:ignore="TextContrastCheck" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/AppTheme.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:theme="@style/AppTheme.RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_dish" />

        <TextView
            android:id="@+id/Location_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/location_text_view"
            android:textAppearance="@style/location_style"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>